# andre_v2

./: .gitignore  pyproject.toml
config/: label_mapping.json  page_mapping.json
scripts/: extract_images_from_pdf.sh  make_predictions.sh  start_tensorboard.sh  train_v5_model.sh
src/: count_objects.py  cvat2crops.py  cvat2yolo.py  cvatJSON2crops.py  extract_relevant_regions.py  json2crops.py  main.py  reconstruct_images.py  show_valid_results.py  validate_annots.py
src/old/: cvatXML2yolo.py
src/utils/: Coords.py  Coords2.py  Label.py  __init__.py
