[tool.poetry]
name = "andre-v2"
version = "0.1.0"
description = ""
authors = ["Francis de Ladurantaye <fdl9044@gmail.com>"]
readme = "README.md"
packages = [{include = "andre_v2"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.2"
xmltodict = "^0.13.0"
pyyaml = "^6.0"
scikit-learn = "^1.2.0"
autopep8 = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
