[tool.poetry]
name = "andre-v2"
version = "0.1.0"
description = ""
authors = ["Francis de Ladurantaye <fdl9044@gmail.com>"]
readme = "README.md"
packages = [{include = "andre_v2"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.2"
xmltodict = "^0.13.0"
pyyaml = "^6.0"
scikit-learn = "^1.2.0"
autopep8 = "^2.0.1"
matplotlib = "^3.6.3"
onnx = "^1.13.1"
onnxruntime = "^1.14.1"
segment-anything = {git = "https://github.com/facebookresearch/segment-anything.git"}
torch = {version = "2.0.0", extras = ["cu118"]}
torchvision = {version = "0.15.1", extras = ["cu118"]}
hdbscan = "^0.8.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
